Externalize DB, JWT, port, and CORS config via environment variables for deployment